2010-01-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add an example spec file for creating rpm files. 
   Thanks to Krzysztof Goliński and Dominic Hopf for efforts here. 


2010-01-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Took over functionality to automatic close \begin{} and \begingroup{}
   from Geany core


2009-01-03  Frank Lanitz  <frank@frank.uvena.de>

 * Don't deactivate wizard icon if no document is open


2009-01-01  Frank Lanitz  <frank@frank.uvena.de>

 * Make text used for inserting references configurable.
   Please check documentation for details on how to do it.


2009-12-26  Frank Lanitz  <frank@frank.uvena.de>

 * Deactivate icons of toolbar, if no LaTeX document is open. Behavior
   can be deactivated via hidden pref.


2009-12-23  Frank Lanitz  <frank@frank.uvena.de>

 * Do only special character replacement in case of we really have
   an LaTeX file here.


2009-12-13  Frank Lanitz  <frank@frank.uvena.de>

 * Show geanyLaTeX inside plugin manager.


2009-10-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Replace also capital German umlauts.


2009-10-10 Frank Lanitz  <frank@frank(dot)uvena(dot)de>

 * Add a function to insert \ref{} and \pageref{} together when
   inserting a reference.


2009-09-13  Frank Lanitz  <frank@frank(dot)uvena(dot)de>

 * Adding custom templates to wizard.


2009-08-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make reference dialog catch suggestions from all *.aux files inside
   the current directory.


2009-08-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Switch to waf and remove autotools build environment. Still experimental.


2009-07-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Correct a tooltip by removing unneeded \t from it.


2009-07-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a function to level up and level down structure element.


2009-07-08  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
